<resources>
    <string name="app_name">বাজার-হিসাব</string>

    <!-- main activity -->
    <string name="settings">সেটিং</string>
    <string name="share">শেয়ার</string>
    <string name="about">সম্পর্কে</string>
    <string name="Language">ভাষা</string>
    <string name="main_activity_headline">খুব সহজে বাজার তালিকা তৈরী করুন</string>

    <!-- help activity -->
    <string name="label_create_list">তালিকা তৈরী</string>
    <string name="label_edit_list">তালিকা সংস্করণ (edit)</string>
    <string name="label_delete_list">তালিকা বাদ দেওয়া (delete)</string>
    <string name="label_adding_product">পণ্য সংযোগ</string>
    <string name="label_product_description">পণ্যের বিবরণ</string>
    <string name="label_product_name">পণ্যের নাম   </string>
    <string name="label_quantity">পরিমাণ   </string>
    <string name="label_unit">পরিমাপক একক   </string>
    <string name="label_cost_per_unit">প্রতি একক পরিমাণ পণ্যের মূল্য   </string>
    <string name="label_edit_product_description">পণ্যের বিবরণ সংস্করণ (edit)</string>
    <string name="label_delete_product">পণ্য বাদ দেওয়া (delete)</string>
    <string name="about_add_button">এই বাটনটিতে ক্লিক করে আপনি তালিকা তৈরী করতে পারবেন। তালিকা তৈরীর সময় তালিকার নাম এবং বাজেট উল্লেখ করুন। তালিকা তৈরী হয়ে গেলে তালিকাটিতে ক্লিক করুন।</string>
    <string name="about_add_item_button">তালিকা তৈরীর পর তালিকার নামের উপর ক্লিক করলে অন্য একটি পেইজে এরকম একটি বাটন পাবেন। বাটনটি তে ক্লিক করে পণ্যের বিবরণ দিয়ে পণ্য যোগ করুন।</string>
    <string name="edit_list_half">তালিকা তৈরী হলে তালিকার নামের পাশের </string>
    <string name="edit_list_last">আইকনে ক্লিক করে তালিকার নাম ও বাজেট পরিবর্তন করতে পারবেন। </string>
    <string name="delete_list">কোনো তালিকা ডিলিট বা বাদ দেওয়ার জন্য তালিকার নামের উপর আঙ্গুল রেখে ডাল দিকে ধাক্কা দিন বা right swipe করুন।</string>
    <string name="edit_details">কোনো পণ্যের নাম, পরিমাণ, একক, মূল্য পরিবর্তনের জন্য পণ্যের নামের উপর ক্লিক করুন।</string>
    <string name="about_app">বাজার-হিসাব অ্যাপটি আপনাকে বাজার তালিকা তৈরীতে এবং ক্রয়-বিক্রয়ের হিসাব রাখতে সহায়তা করবে। </string>
    <string name="edit_item">আপনার তালিকায় থাকা পণ্যের নামের উপর ক্লিক করে ধরে রাখুন (Long press) । নতুন করে পণ্যের নাম, পরিমাণ, একক, মূল্য দিয়ে সংস্কার করুন।</string>
    <string name="delete_item">কোন পণ্য তালিকা থেকে বাদ দিতে চাইলে পণ্যের নামের উপর আঙুল রেখে ডান দিকে ধাক্কা দিন বা right swipe করুন। পণ্য তালিকা থেকে বাদ হয়ে যাবে। সাথে সাথে নিচের দিকে পুনরায় পণ্যটি ফিরিয়ে আনার অপশন চলে আসবে।</string>
    <string name="cost_per_unit_details">প্রতি ১ একক পরিমাণ পণ্যের মূল্য লিখুন। যেমনঃ আপনার কাঙ্খিত পণ্য ২টি কলম হলে, এখানে প্রতি ১টি কলমের দাম লিখুন। আবার ২ কেজি ডাল হলে , প্রতি ১ কেজি ডালের দাম লিখুন। অ্যাপ নিজে থেকেই আপনার প্রদত্ত প্রতি এককের দাম ও পরিমাণ থেকে সঠিক মূল্য হিসাব করে নেবে।</string>
    <string name="item_name">আপনার কাঙ্ক্ষিত পণ্যের নাম লিখুন। যেমনঃ আলু, পেঁয়াজ, তেল ইত্যাদি।</string>
    <string name="marking_des">কোন পণ্য ক্রয়-বিক্রয় হয়ে গেলে তা মার্ক বা দাগিয়ে রাখার জন্য পণ্যের নামের উপর ক্লিক করুন। পণ্যটি সবুজ রঙ হয়ে যাবে। পুনরায় ক্লিক করে পণ্যটি আনমার্ক করুন।</string>
    <string name="unit">আপনার কাঙ্খিত পণ্যের পরিমাপযোগ্য একক লিখবেন এখানে। যেমনঃ আপনার পণ্য যদি ২ কেজি ডাল হয়, তবে এইখানে কেজি লিখবেন। তেমনি ভাবে আপনার পণ্য যদি ২টি কলম হয়, এখানে টি লিখবেন। একইভাবে গ্রাম, কেজি, টি, পিছ, ব্যাগ, হালি, আটি ইত্যাদি লিখুন।</string>
    <string name="quantity">শুধু মাত্র পণ্যের পরিমাণ লিখুন। যেমনঃ আপনার কাঙ্খিত পণ্য ৩ কেজি ডাল হলে, এখানে আপনি শুধু 3 লিখবেন। তেমনিভাবে পণ্য ২টি কলম হলে এইখানে শুধু 2 লিখবেন। </string>

    <!-- main activity bottom sheet fragment -->
    <string name="label_new_list">নতুন তালিকা</string>
    <string name="label_new_list_name_et">তালিকার নাম</string>
    <string name="label_budget_et">বাজেট</string>
    <string name="currency">টাকা</string>
    <string name="create_list">তালিকা তৈরী করুন</string>

    <!-- item activity bottom sheet fragment -->
    <string name="lab_product_name">পণ্যের নামঃ*</string>
    <string name="lab_quantity">পরিমাণঃ*</string>
    <string name="lab_unit">পরিমাপক এককঃ*</string>
    <string name="unit_hint">গ্রাম/কেজি/টি/লিটার ইত্যাদি</string>
    <string name="include_product">তালিকাভুক্ত করুন</string>
    <string name="update_product">নতুন করে তালিকাভুক্ত করুন</string>
    <string name="spinner_kg">কেজি</string>
    <string name="spinner_gram">গ্রাম</string>
    <string name="spinner_liter">লিটার</string>
    <string name="spinner_mili">মি.লি.</string>
    <string name="spinner_piece">পিছ</string>
    <string name="spinner_number">টি</string>
    <string name="spinner_packet">প্যাকেট</string>
    <string name="spinner_bag">ব্যাগ</string>
    <string name="spinner_yard">গজ</string>
    <string name="spinner_feet">ফুট</string>
    <string name="spinner_unit">পরিমাণ</string>
    <string name="spinner_hali">হালি</string>
    <string name="spinner_dozen">ডজন</string>
    <string name="spinner_ati">আঁটি</string>

    <!-- edit list name budget -->
    <string name="ok">ঠিকাছে</string>


    <!--item activity -->
    <string name="item_activity_budget">বাজেট: </string>
    <string name="item_activity_currency"> টাকা</string>
    <string name="total_cost">মোট খরচ</string>
    <string name="remaining_amount">বাকী আছে</string>

    <!-- about activity -->
    <string name="about_app_detail">বাজার বা নিত্যদিনের কেনা-কাটার জন্য আমাদের প্রায়ই তালিকা বা লিস্ট বানাতে হয়। কাগজে-কলমে বাজার তালিকা বানানোর চেয়ে হাতের মুঠোফোনে যদি তালিকা বানানো যায় তবে খারাপ কি! কাগজ কলম বহনের ঝামেলা নেই, কাটা-ছিড়া করার ঝামেলা নেই, হিসাবেরও ঝামেলা নেই। এখান থেকেই বাজার-হিসাব অ্যাপের পরিকল্পনা। </string>


</resources>