<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_theme_color"
        android:orientation="horizontal"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:text="বাজার-হিসাব গাইড"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstLayout"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/app_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/about_app"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/app_logo"
                app:layout_constraintTop_toTopOf="@+id/app_logo" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_creating_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_create_list"
                android:textColor="@color/app_theme_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_logo" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/create_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/app_theme_color"
                android:src="@drawable/ic_baseline_add_24"
                app:fabSize="mini"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_creating_list" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/create_list_button_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/about_add_button"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@+id/create_list_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/create_list_button"
                android:layout_marginStart="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_edit_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_theme_color"
                android:textSize="16sp"
                android:text="@string/label_edit_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_list_button_description"
                android:layout_marginTop="20dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit_list_description_half"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/edit_list_half"
                app:layout_constraintTop_toBottomOf="@+id/label_edit_list"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_edit_24"
                app:layout_constraintStart_toEndOf="@+id/edit_list_description_half"
                app:layout_constraintTop_toTopOf="@+id/edit_list_description_half"
                android:layout_marginStart="5dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit_list_description_last"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/edit_list_last"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/edit_list_description_half"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_delete_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/app_theme_color"
                android:text="@string/label_delete_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_list_description_last"
                android:layout_marginTop="20dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/delete_list_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/delete_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_delete_list"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/app_theme_color"
                android:text="@string/label_adding_product"
                android:id="@+id/label_add_item"
                app:layout_constraintTop_toBottomOf="@+id/delete_list_description"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"/>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_item_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:src="@drawable/ic_baseline_add_24"
                android:backgroundTint="@color/app_theme_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_add_item"
                android:layout_marginTop="8dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/add_item_button_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/about_add_item_button"
                app:layout_constraintStart_toEndOf="@+id/add_item_button"
                app:layout_constraintTop_toTopOf="@+id/add_item_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/about_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_theme_color"
                android:textSize="16sp"
                android:text="@string/label_product_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_item_button_description"
                android:layout_marginTop="20dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/label_product_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_item"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_name_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/item_name"
                app:layout_constraintTop_toBottomOf="@+id/label_item_name"
                app:layout_constraintStart_toStartOf="@+id/label_item_name"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/label_quantity"
                app:layout_constraintTop_toBottomOf="@+id/item_name_description"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quantity_des"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/quantity"
                android:layout_marginStart="3dp"
                app:layout_constraintStart_toStartOf="@+id/quantity"
                app:layout_constraintTop_toBottomOf="@+id/quantity"/>




            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:text="@string/label_cost_per_unit"
                android:id="@+id/label_cost_per_unit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantity_des"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/cost_per_unit_details"
                android:id="@+id/cost_per_unit_des"
                app:layout_constraintStart_toStartOf="@+id/label_cost_per_unit"
                app:layout_constraintTop_toBottomOf="@+id/label_cost_per_unit"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_item_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/app_theme_color"
                android:textSize="16sp"
                android:text="@string/label_edit_product_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cost_per_unit_des"
                android:layout_marginTop="20dp"
                />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/edit_item_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/edit_item"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_item_edit"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/app_theme_color"
                android:layout_marginTop="20dp"
                android:text="@string/label_delete_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_item_details"/>



            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/item_delete_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/delete_item"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/label_item_delete"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/label_marking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="মার্কিং"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/item_delete_description"
                app:layout_constraintStart_toStartOf="@+id/item_delete_description"
                android:textColor="@color/app_theme_color"
                android:layout_marginTop="20dp"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:text="@string/marking_des"
                app:layout_constraintStart_toStartOf="@+id/label_marking"
                app:layout_constraintTop_toBottomOf="@+id/label_marking"
                app:layout_constraintEnd_toEndOf="@+id/item_delete_description"/>






        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</RelativeLayout>