<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_product_name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/_itemNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/app_theme_color"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_quantity"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/_quantityET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/app_theme_color"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="14sp" />



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/lab_unit"/>


    <EditText
        android:id="@+id/_unitET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:text="@string/label_cost_per_unit"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">



        <EditText
            android:id="@+id/_costPerUnitET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:backgroundTint="@color/app_theme_color"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currency"
            android:textColor="@color/black"
            android:textSize="14sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/_includeItemTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/update_product"
        android:textColor="@color/app_theme_color"
        android:textSize="16sp" />


</LinearLayout>